etl-api/src/data/snapshots/etl_api__data__sources__tests__source_config_json_encryption-2.snap
---
source: etl-api/src/data/sources.rs
expression: deserialized_config
---
StoredSourceConfig {
    host: "localhost",
    port: 5432,
    name: "postgres",
    username: "postgres",
    password: Some(
        SerializableSecretString(
            SecretBox<str>([REDACTED]),
        ),
    ),
}
